register login API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 spring.application.name=pragati
+spring.data.redis.host=redis-10017.c31597.asia-seast1-mz.gcp.cloud.rlrcp.com 
+spring.data.redis.port=10017
+spring.data.redis.password=jsrxakedjeyfdddvdv
