--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,4 +14,4 @@ spring.kafka.properties.session.timeout.ms=45000
 spring.main.allow-bean-definition-overriding=true
 
 recruiter_postings.topic.name = recruiter_postings
-recruiter_postings.consumer.start = true
+recruiter_postings.consumer.start = false
